overflow x fix

--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,7 @@ blockquote {
 p {
   text-align: justify;
 }
+
+* {
+  overflow-x: hidden !important;
+}
